--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,8 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 html, body {
   margin: 0;
-  font-family: 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Roboto', serif;
   background-color: #253341;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
